fix bug: ul>p padding too large; ul/ol padding to normal

--- a/src/src/global.less
+++ b/src/src/global.less
@@ -126,12 +126,18 @@ body {
 
     ul,
     ol {
-      padding-left: 20px;
       margin: @padding-md 0;
 
-      ul,
-      ol {
-        margin: 5px 0;
+      li {
+        &,
+        p {
+          margin: 5px 0;
+        }
+
+        ul,
+        ol {
+          margin: 5px 0;
+        }
       }
     }
   }
